fix: modificando label button search

--- a/andreas-booking/src/app/pages/page/page.component.html
+++ b/andreas-booking/src/app/pages/page/page.component.html
@@ -108,7 +108,7 @@
   <div class="explorar">
     <amr-button
       ariaLabel="Search"
-      label="Explorar"
+      label="Buscar"
       buttonSvgIcon="browse"
       iconTheme="white"
       svgIconWidthSize="1.167rem"
