--- a/andreas-booking/src/app/shared/components/picker/picker.component.html
+++ b/andreas-booking/src/app/shared/components/picker/picker.component.html
@@ -1,10 +1,6 @@
-<section class="material-new-date-field" [ngClass]="{ 'data-form': dataForm }">
-  <!-- <div *ngIf="!dataForm" class="label-container">
-    <label class="label">{{ label }}</label>
-  </div> -->
+<section>
  <mat-form-field appearance="fill" class="picker">
-    <div *ngIf="dataForm" class="label-container">
-   <!--    <label class="label">{{ label }}</label> -->
+    <div class="label-container">
     </div>
     <div class="input">
       <input
