--- a/andreas-booking/src/assets/styles/main.scss
+++ b/andreas-booking/src/assets/styles/main.scss
@@ -241,4 +241,8 @@ body {
     background-color: white;
     border: 1px solid #8ab4f8;
   }
+
+  .mat-mdc-form-field-subscript-wrapper {
+    display: none;
+  }
 }
