--- a/andreas-booking/src/app/pages/page/page.component.scss
+++ b/andreas-booking/src/app/pages/page/page.component.scss
@@ -15,40 +15,41 @@
   }
 
   .input-search {
-    border-color: $primary-200;
     display: flex;
+    justify-content: space-between;
 
     .input-wrapper {
       display: flex;
-      justify-content: flex-start;
       align-items: center;
       position: relative;
     }
 
-    .input {
-      width: 14rem;
-      box-sizing: border-box;
-      padding: 1.2rem 1.2rem 1.6rem 2rem;
-
-      background: white;
-      border: 0.1rem solid blue;
-      border-radius: 0.3rem;
+    .input-container {
+      position: relative;
+      margin-right: 1rem;
     }
 
-    .input2 {
-      width: 14rem;
-      box-sizing: border-box;
-      padding: 1.2rem 1.2rem 1.6rem 2rem;
-
-      background: white;
-      border: 0.1rem solid blue;
-      border-radius: 0.3rem;
-      margin-left: 1rem;
-    }
-
-    .search-icon {
+    .input-container amr-svg {
       position: absolute;
-      left: 1.4rem;
+      top: 50%;
+      left: 1.2rem;
+      transform: translateY(-50%);
+      pointer-events: none;
+    }
+
+    .input-container input {
+      width: 14rem;
+      box-sizing: border-box;
+      padding: 1.2rem 1.2rem 1.6rem 2.3rem;
+
+      background: white;
+      border: 0.1rem solid $primary-200;
+      border-radius: 0.3rem;
+    }
+
+    .button-container {
+      display: flex;
+      align-items: center;
     }
 
     .button {
@@ -57,18 +58,20 @@
       width: 43px;
       border-radius: 50%;
       border: 1px solid #8ab4f8;
-      color: #8ab4f8;
+
       text-align: center;
       font-size: 26px;
       transition: all 0.5s ease;
-      z-index: 1;
       position: absolute;
-      transform: translate(-40%, 65%);
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      z-index: 1;
+      margin: 0 14rem;
     }
 
     .input-picker {
       display: flex;
-      margin-left: 6rem;
     }
   }
 
@@ -88,6 +91,7 @@
 
   .tab {
     display: flex;
+    margin-bottom: 2.5rem;
 
     .select-container {
       display: flex;
